[package]
name = "audio-adaptive-scheduling"
version = "0.1.0"
authors = ["Pierre Donat-Bouillud <pierre.donat-bouillud@ircam.fr>"]

[[bin]]
name = "audio_adaptive"
path = "src/main.rs"

[[bin]]
name = "interactive"
path = "src/interactive.rs"

[lib]
name = "basic_example"

[dependencies]
libc = "0.2.11"
rustbox = "*"
portaudio = "*"
rand = "0.3"
time = "*"
lazy_static = "*"
ncollide = "0.9.0"
nalgebra = "*"
