[package]
name = "audio-adaptive-scheduling"
version = "0.1.0"
authors = ["Pierre Donat-Bouillud <pierre.donat-bouillud@ircam.fr>"]

[[bin]]
name = "audio_adaptive"
path = "src/main.rs"

[[bin]]
name = "interactive"
path = "src/interactive.rs"

[[bin]]
name = "complex_graph"
path = "src/complex_graph.rs"

[lib]
name = "audio_adaptive"

[dependencies]
libc = "0.2.11"
rustbox = "*"
portaudio = "*"
rand = "0.5"
time = "*"
lazy_static = "*"
#ncollide = "0.9.0"
#nalgebra = "*"
petgraph = "*"
