[package]
name = "audio-adaptive-scheduling"
version = "0.1.0"
authors = ["Pierre Donat-Bouillud <pierre.donat-bouillud@ircam.fr>"]

[[bin]]
name = "audio_adaptive"
path = "src/main.rs"

[[bin]]
name = "interactive"
path = "src/interactive.rs"

[[bin]]
name = "complex_graph"
path = "src/complex_graph.rs"

[[bin]]
name = "audiograph"
path = "src/audiograph_exec.rs"

[lib]
name = "audio_adaptive"

[dependencies]
libc = "0.2.11"
rustbox = "*"
portaudio = "*"
rand = "*"
time = "*"
lazy_static = "*"
#ncollide = "0.9.0"
#nalgebra = "*"
petgraph = "*"
pest = "2.0"
pest_derive = "2.0"
itertools = "*"
crossbeam-channel = "*"
clap = "*"

[dev-dependencies]
criterion = "0.2.9"

[[bench]]
name = "effect_benchmark"
harness = false
